# cosmos-docs

./: Gemfile  README.md  _config.yml  about.md  index.md  serve.sh
_data/: topnav.yml
_data/agents/: agent_heater.yml  agent_pycubed.yml  agent_raspi.yml  agent_sun.yml  agent_switch.yml  agent_temp.yml
_data/class_docs/beaglebone/: device.yml  gpio.yml  simpleagent.yml  time.yml  timer.yml
_data/class_docs/raspi/: agent.yml  beaglebone.yml  cubesat.yml  gps.yml  heater.yml  imu.yml  sunsensor.yml  tempsensor.yml
_data/collapse/: setup_cross_compiling.yml
_data/faq/: faq.yml
_data/sidebars/: dev_sidebar.yml  home_sidebar.yml  mydoc_sidebar.yml  software_sidebar.yml
_includes/: collapsible.html  footer.html  head.html  image.html  important.html  inline_image.html  link  links.html  note.html  sidebar.html  tip.html  topnav.html  warning.html
_includes/agents/: detail_table.html  device_table.html  request_table.html
_includes/class_docs/: detail_table.html  members_table.html
_includes/series/: nav_buttons.html
_layouts/: agent.html  class.html  faq.html  page.html  series.html
css/: bootstrap.min.css  customstyles.css  doc-styles.css  highlighter.css  syntax.css  theme-blue.css  theme-green.css
js/: beaglebone-status.js
pages/: faq.md  safety-procedures.md
pages/1-intro/: cosmos-introduction.md  cosmos-overview.md
pages/2-getting_started/: development-environment.md  index.md
pages/2-getting_started/install/: cosmos-install-docker.md  cosmos-web.md  docker-install.md  index.md  qt-install.md  ubuntu-install.md  user-install.md
pages/3-features/: index.md  nodes.md  tools.md
pages/4-tutorials/: index.md
pages/4-tutorials/agents/: agent-program.md  agent_file.md  agent_forward.md  agentcalc.md  agents001-002.md  namespace.md  new-agent.md  overview.md  talkfree.md
pages/4-tutorials/agents-with-hardware/: agent_gps.md  arduino.md  raspi.md  teensy.md
pages/4-tutorials/commands/: command-queue.md  commanding.md
pages/4-tutorials/concepts/: errors.md  libraries.md  time.md
pages/4-tutorials/core/: index.md
pages/4-tutorials/cosmos/: cosmos1.md  cosmos2.md  cosmos3.md  cosmos4.md  cosmos5.md
pages/4-tutorials/hardware/: beaglebone.md  gumstix.md  pycubed.md  setup-slip.md
pages/4-tutorials/install/: index.md  qt-install.md  ubuntu-install.md  user-install.md
pages/4-tutorials/namespace/: alias.md  create-node.md  index.md  new-device.md  soh.md
pages/4-tutorials/new-project/: index.md
pages/4-tutorials/setup/: development-environment.md  index.md  setup-cosmos-web.md
pages/4-tutorials/simulation/: orbit.md
pages/5-projects/: index.md
pages/6-developer_guidelines/: index.md
pages/7-workshops/: index.md
pages/8-help/: faq.md  troubleshooting.md
pages/9-resources/: index.md
pages/documentation/: cosmos-introduction.md  cosmos-overview.md  design-overview.md  index.md
pages/documentation/agents/: heater-agent.md  index.md  pycubed-agent.md  raspberry-pi-agent.md  sun-sensor-agent.md  switch-agent.md  temperature-sensor-agent.md
pages/documentation/cosmos/: cosmos-web.md  cosmos.md
pages/documentation/other/: development-environment.md  doxygen.md  pycubed-communication.md  scripts.md
pages/documentation/raspi-library/: agent-class.md  beaglebone-class.md  cubesat-class.md  gps-class.md  heater-class.md  imu-class.md  index.md  sunsensor-class.md  tempsensor-class.md
pages/getting-started/: development-environment.md  index.md
pages/install/: windows.md
pages/other/: hardware-interfaces.md  programming-tutorials.md  useful-tools.md
pages/tutorials/: index.md
software/BeagleBone/beaglebone/source/: CMakeLists.txt
software/BeagleBone/beaglebone/source/agents/: agent_heater.cpp  agent_pycubed.cpp  agent_raspi.cpp  agent_sun.cpp  agent_switch.cpp  agent_temp.cpp
software/BeagleBone/beaglebone/source/simulation/: agent_propagator.cpp
software/BeagleBone/beaglebone/source/tests/: simpleagent_test.cpp  switch_test.cpp
software/BeagleBone/beaglebone/source/utility/: Device.cpp  SimpleAgent.cpp
(+61 files in other folders)
